--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <title>Short</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#2eb086">
+<!-- Windows Phone -->
+<meta name="msapplication-navbutton-color" content="#2eb086">
+<!-- iOS Safari -->
+<meta name="apple-mobile-web-app-status-bar-style" content="#2eb086">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
