--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,14 @@
 <meta name="msapplication-navbutton-color" content="#313552">
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="#313552">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    
   </head>
   <body>
     <app-root></app-root>
