--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Short</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#313552">
-<!-- Windows Phone -->
-<meta name="msapplication-navbutton-color" content="#313552">
-<!-- iOS Safari -->
-<meta name="apple-mobile-web-app-status-bar-style" content="#313552">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
-  <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js"></script>
+    <head>
+        <meta charset="utf-8" />
+        <title>Short</title>
+        <base href="/" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#313552" />
+        <!-- Windows Phone -->
+        <meta name="msapplication-navbutton-color" content="#313552" />
+        <!-- iOS Safari -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="#313552" />
+        <link
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
+        />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-map.min.js"></script>
     <script src="https://cdn.anychart.com/geodata/latest/custom/world/world.js"></script>
 
